[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/人物/黑苗/非战斗/《仙剑奇侠传》98柔情篇全部素材-28-10_爱给网_aigei_com.png" type="Texture" id=1]
[ext_resource path="res://Enemy/BattleMiao1.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemy/BattleMiao2.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemy/Miao.gd" type="Script" id=4]
[ext_resource path="res://Enemy/EnemyStateMachine.gd" type="Script" id=5]
[ext_resource path="res://Enemy/EnemyMove.gd" type="Script" id=6]
[ext_resource path="res://Enemy/EnemyBattle.gd" type="Script" id=7]
[ext_resource path="res://Assets/人物/黑苗/非战斗/《仙剑奇侠传》98柔情篇全部素材-611-4_爱给网_aigei_com.png" type="Texture" id=8]

[sub_resource type="CapsuleShape2D" id=1]
radius = 6.51654
height = 3.26096

[node name="Miao" type="Area2D" groups=[
"CurrentEnemy",
"MapEnemy",
]]
collision_layer = 2
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.16983, -5.26486 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="AtEaseMode" type="Node2D" parent="." groups=[
"AtEase",
]]

[node name="Sprite" type="Sprite" parent="AtEaseMode"]
texture = ExtResource( 1 )
offset = Vector2( 0, -27 )

[node name="miao2" type="Sprite" parent="AtEaseMode/Sprite"]
show_behind_parent = true
position = Vector2( 2.88216, -47.151 )
texture = ExtResource( 8 )

[node name="miao3" type="Sprite" parent="AtEaseMode/Sprite"]
position = Vector2( -40.0859, -28.1296 )
texture = ExtResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="AtEaseMode"]

[node name="BattleMode" type="Node" parent="."]

[node name="YSort" type="YSort" parent="BattleMode"]
visible = false

[node name="BattleMiao1" parent="BattleMode/YSort" instance=ExtResource( 2 )]

[node name="BattleMiao2" parent="BattleMode/YSort" instance=ExtResource( 3 )]
position = Vector2( 61.1403, -25.3053 )
shenfa = 3

[node name="BattleMiao3" parent="BattleMode/YSort" instance=ExtResource( 3 )]
position = Vector2( -63.8576, 19.5309 )
spot = 3
shenfa = 4

[node name="EnemyStateMachine" type="Node" parent="."]
script = ExtResource( 5 )

[node name="Move" type="Node" parent="EnemyStateMachine"]
script = ExtResource( 6 )

[node name="Battle" type="Node" parent="EnemyStateMachine"]
script = ExtResource( 7 )
